--- a/style.css
+++ b/style.css
@@ -142,14 +142,14 @@ body {
     width: 100%;
     height: 100%;
 }
-.game_container {
+.game-container {
     display: flex;
     width: 100%;
     height: 100%;
     justify-content: center;
     align-items: center;
 }
-.map_stone {
+.map-stone {
     width: 1000px;
     height: 500px;
     background: url(./images/map.png) no-repeat center center;
@@ -162,34 +162,34 @@ body {
     align-items: flex-end;
 }
 
-.create_monster {
+.create-monster {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 80px;
 }
-.create_monster li {
+.create-monster li {
     width: 50px;
     height: 50px;
     margin: 5px;
     padding: 10px;
     border: 2px solid #fff;
 }
-.create_monster li img {
+.create-monster li img {
     width: 100%;
 }
 .monster {
     width: 100px;
 }
-.monster_stone {
+.monster-stone {
     display: none;
 }
-.monster .monster_stone img {
+.monster .monster-stone img {
     width: 100%;
 }
-.show {
+.is-show {
     display: block;
 }
-.hide {
+.is-hide {
     display: none;
 }
