--- a/style.css
+++ b/style.css
@@ -62,7 +62,11 @@ body {
 .tower-computer,
 .tower-user {
     width: 90px;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
     padding: 0 20px;
+    justify-content: flex-end;
 }
 .tower-computer progress,
 .tower-user progress {
